Made text inputs fixed size so that my components don't flip out every time something is resized. Now, text areas have scrollable overflow in the y-direction.

--- a/client/src/styles/InputComponents.css
+++ b/client/src/styles/InputComponents.css
@@ -6,6 +6,12 @@
     min-height: 78.91px;
 }
 
+textarea {
+    overflow-y: scroll !important;
+    height: 100% !important;
+    resize: none !important;
+}
+
 /* .test-script-name {
     min-height: 78.91px !important;
 } */
@@ -27,7 +33,7 @@
 }
 
 .test-script-description .MuiOutlinedInput-root {
-    min-height: 250px !important;
+    height: 300px !important;
 }
 
 /* .test-script-description .MuiOutlinedInput-root {
@@ -35,11 +41,11 @@
 } */
 
 .step-description .MuiOutlinedInput-root {
-    min-height: 150px !important;
+    height: 150px !important;
 }
 
 .step-data-inputted-by-user .MuiOutlinedInput-root {
-    min-height: 100px !important;
+    height: 100px !important;
 }
 
 .MuiOutlinedInput-input {
